<resources>
    <string name="app_name">Food Ordering Application</string>
    <string name="next">Next</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="continue_with">Continue With</string>
    <string name="or">or</string>
    <string name="Login" />
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bell_icon_desc">Notification Bell</string>
</resources>